trunk/Archive2/68/dca32114048704/output
main.cpp:11:21: error: use of enum 'x' without previous declaration
     void turn( enum x ) {}
                     ^
main.cpp:6:5: error: new types may not be defined in a return type
     enum state {
     ^
main.cpp:6:5: note: (perhaps a semicolon is missing after the definition of 'computer::state')
main.cpp:11:23: error: two or more data types in declaration of 'turn'
     void turn( enum x ) {}
                       ^
main.cpp: In function 'int main()':
main.cpp:15:14: warning: unused variable 'c' [-Wunused-variable]
     computer c;
              ^
